# Base

./: Makefile  ex.py  pyproject.toml
class_base/: base.py
class_base/di_conteiner/: client.py  confgi.py  mail.py  main.py
conditions/: base.py  if_else_construction.py
function_base/: print_name_function.py  returned_value.py
loop_structure/: base.py  loop_in_string.py
loop_structure/get_len_str/: exeple_method.py  settings.py
loop_structure/get_len_str/srv/: large_test.txt  large_test_metadata.json
loop_structure/get_len_str/test/: conftest.py  test_functions.py
loop_structure/get_len_str/utils/: create_text.py  logger.py  time_decor.py
read_file/async_read/: base.py
read_file/sync_read/: base.py
structure/dict_/: create_dict.py  fill_dict.py
structure/list_/: create_list.py  delete_element_list.py  insert_value_in_list.py
variable/: create_any_type_variable.py  create_variabel.py
