[tool.poetry]
name = "basic"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^37.0.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
aiofiles = "^24.1.0"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
